--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   }
 
 #head{
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -45,4 +45,9 @@
 
 .err{
     border: 5px solid rgba(255, 0, 0, 0.527);
+}
+
+#cal{
+    display: flex;
+    justify-content: center;
 }
